regestration of user using name and email

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGODB_URL=mongodb+srv://cluster0.rinsvnx.mongodb.net
+MONGODB_URL=mongodb://127.0.0.1:27017/shashank_admin
+
+# MONGODB_URL=mongodb+srv://cluster0.rinsvnx.mongodb.net
